--- a/config/splitkb_aurora_corne.conf
+++ b/config/splitkb_aurora_corne.conf
@@ -7,3 +7,7 @@
 
 # Uncomment the following lines to enable RGB underglow
 # CONFIG_ZMK_RGB_UNDERGLOW=y
+
+# Turn on logging, and set ZMK logging to debug output
+CONFIG_ZMK_USB_LOGGING=y
+ZMK_LOG_LEVEL=1
